--- a/partials/header.html
+++ b/partials/header.html
@@ -31,7 +31,7 @@
             <i class="fa-brands fa-square-facebook"></i>
             <i class="fa-brands fa-square-instagram"></i>
             <i class="fa-brands fa-square-twitter"></i>
-            <i class="fa-solid fa-basket-shopping"></i>
+            <i class="fa-brands fa-opencart"></i>
 
         </div>
     </nav>
