--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@
   background-color: rgb(255, 191, 101);
   display: flex;
   justify-content: space-between;
+  padding: 0 20px;
+  height: 40px;
 }
 
 .left {
   display: flex;
   width: 20%;
   justify-content: space-between;
+  padding-top: 10px;
 }
 
 .right {
@@ -24,4 +27,10 @@
 
 .search {
   margin-right: 100px;
+  padding-top: 10px;
+}
+
+.search input[type="search"] {
+  border-radius: 15px 15px 15px 15px;
+  border: 1px solid #ccc;
 }
