--- a/partials/header.html
+++ b/partials/header.html
@@ -37,10 +37,10 @@
     </nav>
     <nav class="navbar-two">
         <div class="logo">
-            <img src="../images/Tail_Waggers_Logo_Transparent.png" alt="brand-logo">
+            <a href="/index.html"><img src="../images/Tail_Waggers_Logo_Transparent.png" alt="brand-logo"></a>
         </div>
         <div class="nav-links">
-            <ul>
+            <ul class="map">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
