--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -10,40 +10,44 @@
 </head>
 
 <body>
-    <nav class="nav-one">
-        <div class="left">
-            <i class="fa-regular fa-envelope"></i>
-            <span>info@tailwaggers.com</span>
-            <i class="fa-solid fa-phone"></i>
-            <span>+1 (555) 789-PAWS</span>
-        </div>
-        <div class="right">
-            <div class="search-box">
-                <input type="text" name="search" id="search">
-                <label for="search"></label>
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
-            <div class="icons">
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-solid fa-cart-shopping"></i>
-            </div>
-        </div>
-    </nav>
 
-    <nav class="nav-two">
-        <div class="logo">
-            <img src="../images/paw-logo.png" alt="brand-logo">
-        </div>
-        <div class="nav-links">
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+    <object>
+        <nav class="nav-one">
+            <div class="left">
+                <i class="fa-regular fa-envelope"></i>
+                <span>info@tailwaggers.com</span>
+                <i class="fa-solid fa-phone"></i>
+                <span>+1 (555) 789-PAWS</span>
+            </div>
+            <div class="right">
+                <div class="search-box">
+                    <input type="text" name="search" id="search">
+                    <label for="search"></label>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <div class="icons">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+        </nav>
+
+        <nav class="nav-two">
+            <div class="logo">
+                <img src="../images/paw-logo.png" alt="brand-logo">
+            </div>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </object>
+
 </body>
 
 </html>
