--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
   background-color: white;
   padding: 15px;
 }
-
+.body {
+  margin: 0;
+}
 .right {
   font-size: 20px;
   display: flex;
@@ -59,4 +61,5 @@
   border: none;
   width: 100%;
   margin: 0;
+  height: auto;
 }
