--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -41,6 +41,8 @@
             <div class="nav-links">
                 <ul>
                     <li><a href="#">About</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Categories</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
