--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 }
 
 .banner {
-  background-image: url(images/ok.jpeg);
-  height: 60vh;
+  background-image: url(images/party-dog.avif);
+  height: 70vh;
   width: 100%;
   background-size: cover;
   background-position: center center;
