add more product cards

--- a/partials/navigation.css
+++ b/partials/navigation.css
@@ -36,7 +36,6 @@
   display: flex;
   justify-content: space-between;
   padding: 15px;
-  background-color: rgb(146, 180, 244);
 }
 
 .logo img {
@@ -54,7 +53,7 @@
 .nav-links a {
   text-decoration: none;
   padding: 5px;
-  color: whitesmoke;
+  color: black;
 }
 
 .auto-height-iframe {
