--- a/style.css
+++ b/style.css
@@ -2,10 +2,29 @@
   margin: 0;
 }
 
-.banner {
-  background-image: url(images/party-dog.avif);
-  height: 70vh;
+.banner-container {
+  display: flex;
   width: 100%;
+  height: 70vh;
+}
+
+.banner-photo {
+  background-image: url(images/happy-lab.jpeg);
   background-size: cover;
-  background-position: center center;
+  background-position: center;
+  width: 50%;
+  height: 100%;
+}
+
+.banner-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 50%;
+  background-color: rgb(241, 157, 161);
+}
+
+li {
+  list-style: none;
 }
