update aside product filters

--- a/partials/aside-products.html
+++ b/partials/aside-products.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="aside-products.css">
 </head>
 
 <body>
@@ -19,6 +20,13 @@
                 <label><input type="radio" name="category" value="food&treats">Food & Treats</label>
                 <label><input type="radio" name="category" value="accessories">Accessories</label>
             </fieldset>
+            <fieldset>
+                <legend>Features</legend>
+                <label><input type="checkbox" name="features" value="new">New Arrivals</label>
+                <label><input type="checkbox" name="features" value="on-sale">On Sale</label>
+                <label><input type="checkbox" name="features" value="bestsellers">Bestsellers</label>
+            </fieldset>
+            <button type="submit">Apply filters</button>
         </form>
     </aside>
 </body>
