--- a/products.css
+++ b/products.css
@@ -3,6 +3,8 @@
   overflow-x: auto;
   padding: 16px 0;
   gap: 16px;
+  width: 80%;
+  flex: 1;
 }
 
 .product-card {
@@ -25,4 +27,15 @@ img {
   width: 100%;
   height: 50%;
   object-fit: cover;
+}
+
+.products-aside {
+  margin-top: 25px;
+  width: 70%;
+  height: 40vh;
+  border-right: 1px solid #ddd;
+}
+
+.wrapper {
+  display: flex;
 }
