--- a/partials/aside-products.html
+++ b/partials/aside-products.html
@@ -9,26 +9,29 @@
 </head>
 
 <body>
-    <aside class="aside-products">
-        <form class="filter-form">
-            <fieldset>
-                <legend>Categories</legend>
-                <label><input type="radio" name="category" value="all">All</label>
-                <label><input type="radio" name="category" value="beds&furniture">Beds & Furniture</label>
-                <label><input type="radio" name="category" value="toys">Toys</label>
-                <label><input type="radio" name="category" value="grooming">Grooming</label>
-                <label><input type="radio" name="category" value="food&treats">Food & Treats</label>
-                <label><input type="radio" name="category" value="accessories">Accessories</label>
-            </fieldset>
-            <fieldset>
-                <legend>Features</legend>
-                <label><input type="checkbox" name="features" value="new">New Arrivals</label>
-                <label><input type="checkbox" name="features" value="on-sale">On Sale</label>
-                <label><input type="checkbox" name="features" value="bestsellers">Bestsellers</label>
-            </fieldset>
-            <button type="submit">Apply filters</button>
-        </form>
-    </aside>
+    <object data="" type="">
+        <div class="aside-products">
+            <form class="filter-form">
+                <fieldset>
+                    <legend>Categories</legend>
+                    <label><input type="radio" name="category" value="all">All</label>
+                    <label><input type="radio" name="category" value="beds&furniture">Beds & Furniture</label>
+                    <label><input type="radio" name="category" value="toys">Toys</label>
+                    <label><input type="radio" name="category" value="grooming">Grooming</label>
+                    <label><input type="radio" name="category" value="food&treats">Food & Treats</label>
+                    <label><input type="radio" name="category" value="accessories">Accessories</label>
+                </fieldset>
+                <fieldset>
+                    <legend>Features</legend>
+                    <label><input type="checkbox" name="features" value="new">New Arrivals</label>
+                    <label><input type="checkbox" name="features" value="on-sale">On Sale</label>
+                    <label><input type="checkbox" name="features" value="bestsellers">Bestsellers</label>
+                </fieldset>
+                <button type="submit">Apply filters</button>
+            </form>
+        </div>
+    </object>
+
 </body>
 
 </html>
