--- a/style.css
+++ b/style.css
@@ -4,25 +4,18 @@
 
 .banner-container {
   display: flex;
-  width: 100%;
-  height: 70vh;
-}
-
-.banner-photo {
   background-image: url(images/happy-lab.jpeg);
   background-size: cover;
   background-position: center;
-  width: 50%;
-  height: 100%;
+  width: 100%;
+  height: 70vh;
 }
 
 .banner-text {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
-  width: 50%;
-  background-color: rgb(241, 157, 161);
+  margin-left: 20px;
 }
 
 li {
