--- a/partials/footer.css
+++ b/partials/footer.css
@@ -3,3 +3,20 @@
   width: 100%;
   height: 30vh;
 }
+
+.info-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.links {
+  list-style: none;
+}
+
+.links li {
+  padding: 3px;
+}
+
+.links a {
+  text-decoration: none;
+}
