--- a/partials/footer.html
+++ b/partials/footer.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="footer.css">
 </head>
 
@@ -41,11 +42,13 @@
         <div class="map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.7124357766465!2d15.985511076290049!3d45.7569106710803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d5ecf2f33c79%3A0x371e6fc03984905a!2sPet%20centar!5e0!3m2!1sen!2shr!4v1705254447636!5m2!1sen!2shr"
-                width="100%" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+                width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="icons">
-
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
         </div>
     </div>
 </body>
