--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -40,7 +40,7 @@
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href="#">About</a></li>
+                    <li><a href="../aboutus.html" target="_blank">About Us</a></li>
                     <li><a href="../products.html" target="_blank">Products</a></li>
                     <li><a href="#">Categories</a></li>
                     <li><a href="#">Blog</a></li>
