--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 .body {
   margin: 0;
+  display: flex;
+}
+
+header,
+footer {
+  flex: 1;
+}
+
+main {
+  flex: 5;
 }
 
 .banner-container {
@@ -8,7 +18,7 @@
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 70vh;
+  height: 60vh;
 }
 
 .banner-text {
