--- a/partials/aside-products.html
+++ b/partials/aside-products.html
@@ -27,7 +27,7 @@
                     <label><input type="checkbox" name="features" value="on-sale">On Sale</label>
                     <label><input type="checkbox" name="features" value="bestsellers">Bestsellers</label>
                 </fieldset>
-                <button type="submit">Apply filters</button>
+                <button type="submit" class="filter-button">Apply filters</button>
             </form>
         </div>
     </object>
