--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -42,9 +42,8 @@
                 <ul>
                     <li><a href="../aboutus.html" target="_blank">About Us</a></li>
                     <li><a href="../products.html" target="_blank">Products</a></li>
-                    <li><a href="#">Categories</a></li>
                     <li><a href="../blog.html" target="_blank">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../contact.html" target="_blank">Contact</a></li>
                 </ul>
             </div>
 
