--- a/products.css
+++ b/products.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #f9f9f9;
+}
+
 .product-container {
   display: flex;
   overflow-x: auto;
@@ -8,7 +12,7 @@
 }
 
 .product-card {
-  border: 1px solid #ddd;
+  border: 1px solid #f4bdbd;
   border-radius: 8px;
   padding: 16px;
   text-align: center;
@@ -38,4 +42,18 @@ img {
 
 .wrapper {
   display: flex;
+}
+
+.cart-button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(249, 201, 201);
+  color: black;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.cart-button:hover {
+  background-color: rgb(248, 168, 168);
 }
